Se crearon las consultas en personasDAO para la tabla del frame seleccionarPersonas, se agregaron clases de ayuda (validadores y DTO persona sin codigo, además de la configuración de paginado)